fix the gap between main bg and the 1st section

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -159,7 +159,7 @@
 }
 
 #home {
-  height: 700px;
+  height: 630px;
 }
 
 #about {
